--- a/CV Gonzalo Noceda/index.html
+++ b/CV Gonzalo Noceda/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Gonzalo Noceda">
     <title>Currículum Vitae Gonzalo Matías Noceda</title>
-    <link rel="stylesheet" href="CSS/prueba.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
